--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   
 <header>
+  <div class="container">
   <nav class="nav">
     <div class="logo">
       <img src="./img/logo.svg" alt="logo">
@@ -27,6 +28,7 @@
   <p>Fylo stores all your most important files in one secure location. Access them wherever 
     you need, share and collaborate with friends family, and co-workers.</p>
   <button class="btn">Get Started</button>
+</div>
 </header>
 
 </body>
