--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   
-<header>
-  <div class="container">
+<header class="container">
   <nav class="nav">
     <div class="logo">
       <img src="./img/logo.svg" alt="logo">
@@ -28,7 +27,6 @@
   <p>Fylo stores all your most important files in one secure location. Access them wherever 
     you need, share and collaborate with friends family, and co-workers.</p>
   <button class="btn">Get Started</button>
-</div>
 </header>
 
 </body>
