--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   
-<header class="container">
+<header>
+<div class="container">
   <nav class="nav">
     <div class="logo">
       <img src="./img/logo.svg" alt="logo">
@@ -26,6 +27,7 @@
   <h1>All your files in one secure location, accessible anywhere.</h1>
   <p>Fylo stores all your most important files in one secure location. Access them wherever 
     you need, share and collaborate with friends family, and co-workers.</p>
+  </div>
   <button class="btn">Get Started</button>
 </header>
 
