--- a/index.html
+++ b/index.html
@@ -61,5 +61,25 @@
     </div>
   </div>
 </section>
+
+<section class="productive">
+  <div class="container">
+    <div class="productive-container">
+    <div class="prod-img">
+      <img src="./img/illustration-stay-productive.png" alt="">
+    </div>
+    <div class="prod-text">
+      <h3>Stay productive, wherever you are</h3>
+      <p>Never let location be an issue when accessing your files. Fylo has you  covered for all of your file storage needs</p>
+      <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+
+      <div class="link">
+        <a href="#">See how Fylo works </a>
+        <img src="./img/icon-arrow.svg" alt="">
+      </div>
+    </div>
+    </div>
+  </div>
+</section>
 </body>
 </html>
