--- a/index.html
+++ b/index.html
@@ -81,5 +81,58 @@
     </div>
   </div>
 </section>
+
+<section class="cards">
+  <div class="container">
+    <div class="cards-info">
+      <div class="card">
+        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+          become a well-oiled collaboration machine.</p>
+        <div class="author-info">
+          <img src="./img/profile-1.jpg" alt="">
+          <div class="author">
+            <p class="name">Satish Patel</p>
+            <small>Founder & CEO, Huddle</small>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+          become a well-oiled collaboration machine.</p>
+        <div class="author-info">
+          <img src="./img/profile-2.jpg" alt="">
+          <div class="author">
+            <p class="name">Bruce McKenzie</p>
+            <small>Founder & CEO, Huddle</small>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+          become a well-oiled collaboration machine.</p>
+        <div class="author-info">
+          <img src="./img/profile-3.jpg" alt="">
+          <div class="author">
+            <p class="name">Iva Boyd</p>
+            <small>Founder & CEO, Huddle</small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="subscribe">
+  <div class="container">
+    <div class="early-access">
+      <h2>Get early access today</h2>
+      <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+      <div class="input">
+        <input type="email" placeholder="email@example.com" class="email">
+        <button class="btn">Start For Free</button>
+      </div>
+    </div>
+  </div>
+</section>
 </body>
 </html>
