--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
 <section class="info__section">
   <div class="container">
-    <div class="info-section" data-aos="fade-zoom-in">
+    <div class="info-section" data-aos="fade-zoom-in"
+    data-aos-duration="1000">
       <div class="info">
         <img src="./img/icon-access-anywhere.svg" alt="">
         <h3>Access your files, anywhere</h3>
@@ -66,10 +67,10 @@
 <section class="productive">
   <div class="container">
     <div class="productive-container">
-    <div class="prod-img">
+    <div class="prod-img" data-aos="fade-right" data-aos-duration="2000">
       <img src="./img/illustration-stay-productive.png" alt="">
     </div>
-    <div class="prod-text">
+    <div class="prod-text" data-aos="fade-left" data-aos-duration="2000">
       <h3>Stay productive, wherever you are</h3>
       <p>Never let location be an issue when accessing your files. Fylo has you  covered for all of your file storage needs</p>
       <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
@@ -85,7 +86,7 @@
 
 <section class="cards">
   <div class="container">
-    <div class="cards-info" data-aos="flip-up">
+    <div class="cards-info" data-aos="flip-up"  data-aos-duration="1000">
       <div class="card">
         <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
           become a well-oiled collaboration machine.</p>
