--- a/index.html
+++ b/index.html
@@ -1,142 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/responsive.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Fylo Dark Theme</title>
-</head>
-<body>
-  
-<header>
-<div class="container">
-  <nav class="nav">
-    <div class="logo">
-      <img src="./img/logo.svg" alt="logo">
-    </div>
-    <div class="nav-list">
-      <a href="#">Features</a>
-      <a href="#" class="nav_a">Team</a>
-      <a href="#">Sign In</a>
-    </div>
-  </nav>
-  <div class="img">
-    <img src="./img/illustration-intro.png" alt="il">
-  </div>
-  <h1>All your files in one secure location, accessible anywhere.</h1>
-  <p>Fylo stores all your most important files in one secure location. Access them wherever 
-    you need, share and collaborate with friends family, and co-workers.</p>
-  </div>
-  <button class="btn">Get Started</button>
-</header>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/responsive.css" />
+		<link rel="stylesheet" href="./css/style.css" />
+		<title>Fylo Dark Theme</title>
+	</head>
+	<body>
+		<header>
+			<div class="container">
+				<nav class="nav">
+					<div class="logo">
+						<img src="./img/logo.svg" alt="logo" />
+					</div>
+					<div class="nav-list">
+						<a href="https://www.google.lv/?hl=lv">Features</a>
+						<a href="https://www.google.lv/?hl=lv" class="nav_a">Team</a>
+						<a href="https://www.google.lv/?hl=lv">Sign In</a>
+					</div>
+				</nav>
+				<div class="img">
+					<img src="./img/illustration-intro.png" alt="il" />
+				</div>
+				<h1>All your files in one secure location, accessible anywhere.</h1>
+				<p>
+					Fylo stores all your most important files in one secure location.
+					Access them wherever you need, share and collaborate with friends
+					family, and co-workers.
+				</p>
+			</div>
+			<a href="https://www.google.lv/?hl=lv"
+				><button class="btn">Get Started</button></a
+			>
+		</header>
 
-<section class="info__section">
-  <div class="container">
-    <div class="info-section">
-      <div class="info">
-        <img src="./img/icon-access-anywhere.svg" alt="">
-        <h3>Access your files, anywhere</h3>
-        <p>The ability to use a smartphone, tablet, or computer to access your account means your 
-          files follow you everywhere.</p>
-      </div>
-      <div class="info">
-        <img src="./img/icon-security.svg" alt="">
-        <h3>Security you can trust</h3>
-        <p>2-factor authentication and user-controlled encryption are just a couple of the security 
-          features we allow to help secure your files.</p>
-      </div>
-      <div class="info">
-        <img src="./img/icon-collaboration.svg" alt="">
-        <h3>Real-time collaboration</h3>
-        <p>Securely share files and folders with friends, family and colleagues for live collaboration. 
-          No email attachments required.</p>
-      </div>
-      <div class="info">
-        <img src="./img/icon-any-file.svg" alt="">
-        <h3>Store any type of file</h3>
-        <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-          file types to be securely stored and shared.</p>
-      </div>
-    </div>
-  </div>
-</section>
+		<section class="info__section">
+			<div class="container">
+				<div class="info-section">
+					<div class="info">
+						<img src="./img/icon-access-anywhere.svg" alt="" />
+						<h3>Access your files, anywhere</h3>
+						<p>
+							The ability to use a smartphone, tablet, or computer to access
+							your account means your files follow you everywhere.
+						</p>
+					</div>
+					<div class="info">
+						<img src="./img/icon-security.svg" alt="" />
+						<h3>Security you can trust</h3>
+						<p>
+							2-factor authentication and user-controlled encryption are just a
+							couple of the security features we allow to help secure your
+							files.
+						</p>
+					</div>
+					<div class="info">
+						<img src="./img/icon-collaboration.svg" alt="" />
+						<h3>Real-time collaboration</h3>
+						<p>
+							Securely share files and folders with friends, family and
+							colleagues for live collaboration. No email attachments required.
+						</p>
+					</div>
+					<div class="info">
+						<img src="./img/icon-any-file.svg" alt="" />
+						<h3>Store any type of file</h3>
+						<p>
+							Whether you're sharing holidays photos or work documents, Fylo has
+							you covered allowing for all file types to be securely stored and
+							shared.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
-<section class="productive">
-  <div class="container">
-    <div class="productive-container">
-    <div class="prod-img">
-      <img src="./img/illustration-stay-productive.png" alt="">
-    </div>
-    <div class="prod-text">
-      <h3>Stay productive, wherever you are</h3>
-      <p>Never let location be an issue when accessing your files. Fylo has you  covered for all of your file storage needs</p>
-      <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+		<section class="productive">
+			<div class="container">
+				<div class="productive-container">
+					<div class="prod-img">
+						<img src="./img/illustration-stay-productive.png" alt="" />
+					</div>
+					<div class="prod-text">
+						<h3>Stay productive, wherever you are</h3>
+						<p>
+							Never let location be an issue when accessing your files. Fylo has
+							you covered for all of your file storage needs
+						</p>
+						<p>
+							Securely share files and folders with friends, family and
+							colleagues for live collaboration. No email attachments required.
+						</p>
 
-      <div class="link">
-        <a href="#">See how Fylo works </a>
-        <img src="./img/icon-arrow.svg" alt="">
-      </div>
-    </div>
-    </div>
-  </div>
-</section>
+						<div class="link">
+							<a href="#">See how Fylo works </a>
+							<img src="./img/icon-arrow.svg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-<section class="cards">
-  <div class="container">
-    <div class="cards-info">
-      <div class="card">
-        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-          become a well-oiled collaboration machine.</p>
-        <div class="author-info">
-          <img src="./img/profile-1.jpg" alt="">
-          <div class="author">
-            <p class="name">Satish Patel</p>
-            <small>Founder & CEO, Huddle</small>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-          become a well-oiled collaboration machine.</p>
-        <div class="author-info">
-          <img src="./img/profile-2.jpg" alt="">
-          <div class="author">
-            <p class="name">Bruce McKenzie</p>
-            <small>Founder & CEO, Huddle</small>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-          become a well-oiled collaboration machine.</p>
-        <div class="author-info">
-          <img src="./img/profile-3.jpg" alt="">
-          <div class="author">
-            <p class="name">Iva Boyd</p>
-            <small>Founder & CEO, Huddle</small>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+		<section class="cards">
+			<div class="container">
+				<div class="cards-info">
+					<div class="card">
+						<p>
+							Fylo has improved our team productivity by an order of magnitude.
+							Since making the switch our team has become a well-oiled
+							collaboration machine.
+						</p>
+						<div class="author-info">
+							<img src="./img/profile-1.jpg" alt="" />
+							<div class="author">
+								<p class="name">Satish Patel</p>
+								<small>Founder & CEO, Huddle</small>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<p>
+							Fylo has improved our team productivity by an order of magnitude.
+							Since making the switch our team has become a well-oiled
+							collaboration machine.
+						</p>
+						<div class="author-info">
+							<img src="./img/profile-2.jpg" alt="" />
+							<div class="author">
+								<p class="name">Bruce McKenzie</p>
+								<small>Founder & CEO, Huddle</small>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<p>
+							Fylo has improved our team productivity by an order of magnitude.
+							Since making the switch our team has become a well-oiled
+							collaboration machine.
+						</p>
+						<div class="author-info">
+							<img src="./img/profile-3.jpg" alt="" />
+							<div class="author">
+								<p class="name">Iva Boyd</p>
+								<small>Founder & CEO, Huddle</small>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-<section class="subscribe">
-  <div class="container">
-    <div class="early-access">
-      <h2>Get early access today</h2>
-      <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
-      <div class="input">
-        <input type="email" placeholder="email@example.com" class="email">
-        <button class="btn">Start For Free</button>
-      </div>
-    </div>
-  </div>
-</section>
+		<section class="subscribe">
+			<div class="container">
+				<div class="early-access">
+					<h2>Get early access today</h2>
+					<p>
+						It only takes a minute to sign up and our free starter tier is
+						extremely generous. If you have any questions, our support team
+						would be happy to help you.
+					</p>
+					<div class="input">
+						<input type="email" placeholder="email@example.com" class="email" />
+						<a href="https://www.google.lv/?hl=lv"
+							><button class="btn">Start For Free</button></a
+						>
+					</div>
+				</div>
+			</div>
+		</section>
 
-<footer>
-  
-</footer>
-</body>
+		<footer></footer>
+	</body>
 </html>
